--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title></title>
+<title>MMINT.UK</title>
 
 <meta name="description" content="">
 <meta name="author" content="">
@@ -28,20 +28,20 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="" />
+</noscript><meta property="og:title" content="MMINT.UK" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://mmint.uk/" />
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content=""/>
+<meta name="twitter:title" content="MMINT.UK"/>
 <meta name="twitter:description" content=""/>
 
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "",
+  "name": "MMINT.UK",
   "url": "https://mmint.uk",
   "description": "",
   "thumbnailUrl": "https://mmint.uk/favicon.ico",
@@ -63,6 +63,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
+            <a href="https://mmint.uk" accesskey="h" title="MMINT.UK (Alt + H)">MMINT.UK</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -319,7 +320,7 @@ Don: Yes, Yes, Yes!</p>
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="https://mmint.uk"></a></span> |
+    <span>&copy; 2023 <a href="https://mmint.uk">MMINT.UK</a></span> |
     <span>
         <a href="mailto:info@mmint.uk" rel="noopener noreferrer" target="_blank">info@mmint.uk</a>
     </span>
